CHROMIUM: mtk-mdp: use upstream mtk_mdp_m2m_s_selection()

The Crop/Compose behaviors are reversed in our implementation of
mtk_mdp_m2m_s_selection. We want to use the right way to use selection
API in user space. Use the upstream selection implementation and
provide mtk_mdp_m2m_s_crop for current user space to use. We will
remove mtk_mdp_m2m_s_crop after we use selection API in user space.

BUG=chromium:615857
TEST=Play video and run VDA unittest.

Change-Id: Ib4a30f85942fe681b34fdecd709216083f8dd486
Signed-off-by: Moja Hsu <mojahsu@chromium.org>
Reviewed-on: https://chromium-review.googlesource.com/566742
Commit-Ready: Hsu Wei-Cheng <mojahsu@chromium.org>
Tested-by: Hsu Wei-Cheng <mojahsu@chromium.org>
Reviewed-by: Wu-Cheng Li <wuchengli@chromium.org>